--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="styles.css" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=VT323&display=swap" rel="stylesheet">
-  <title>Frontend Mentor | QR code component</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
   <div class="card">
-    <img src="/images/image-qr-code.png" alt="qr code">
-    <div class="container">
-      <p>Improve your front-end skills by building projects</p>
-
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <img src="/assets/images/avatar-jessica.jpeg" alt="jessica randall">
+    <div class="info">
+      <p id="name">Jessica Randall</p>
+      <p id="loc">London, United Kingdom</p>
+    </div>
+    <p id="quote">"Front-end developer and avid reader."</p>
+    <div class="links">
+      <button type="button">GitHub</button>
+      <button type="button">Frontend Mentor</button>
+      <button type="button">LinkedIn</button>
+      <button type="button">Twitter</button>
+      <button type="button">Instagram</button>
     </div>
   </div>
   <div class="attribution">
